tests/lean/typeIncorrectPat.lean.expected.out
typeIncorrectPat.lean:2:1-2:17: error: pattern
  true
has type
  Bool : Type
but is expected to have type
  fstâœ : Type
